# Common-Report-Module

./: 404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  sitemap.xml
BatchClient/: index.html
BulkClient/: index.html
Common_Report_Module/: reports.py
DepartmentClient/: index.html
Reports/: index.html
SemesterClient/: index.html
StudentClient/: index.html
SubjectClient/: index.html
Usage/: index.html
common-report-module/: __init__.py
docs/: BatchClient.md  BulkClient.md  Reports.md  SemesterClient.md  Usage.md  index.md
docs/Clients/: DepartmentClient.md  StudentClient.md  SubjectClient.md  index.md
example/: example1.py  example2.py  example3.py
search/: search_index.json
semester_stats_report/: __init__.py  batchclient.py  bulkclient.py  client.py  deptclient.py  helpers.py  httpclient.py  regex.py  reports.py  studentclient.py  subjectclient.py
tests/: test_helpers.py  test_regex.py
