[tool.poetry]
name = "common-report-module"
version = "0.1.0"
description = "Helper Module for the Semester-Stats"
authors = ["Rushyanth S <42034084+Rushyanth111@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
