[tool.poetry]
name = "semester-stats-report"
version = "0.0.1"
description = "Helper Module for the Semester-Stats"
authors = ["Rushyanth S <42034084+Rushyanth111@users.noreply.github.com>"]
packages = [
    {include = "semester_stats_report"},
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
