[tool.poetry]
name = "semester-stats-report"
version = "2.0.1"
description = "Helper Module for the Semester-Stats"
authors = ["Rushyanth S <42034084+Rushyanth111@users.noreply.github.com>"]
packages = [
    {include = "semester_stats_report"},
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mkdocstrings = "^0.13.6"
mkdocs-material = "^6.0.2"
isort = "^5.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
